feat: BER length decoder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "description": "asn.1 parser circom",
   "scripts": {
     "start": "npx ts-node ./src/index.ts",
-    "test": "npx mocha"
+    "test": "npx mocha",
+    "clean": "npx circomkit clean"
   },
   "dependencies": {
     "@zk-email/circuits": "^6.1.2",
