--- a/package.json
+++ b/package.json
@@ -1,33 +1,11 @@
 {
-  "name": "asn1-parser-circom",
   "description": "circom asn.1 der and ber parser",
-  "scripts": {
-    "start": "npx ts-node ./src/index.ts",
-    "test": "npx mocha",
-    "clean": "npx circomkit clean"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0xVikasRushi/asn1-parser-circom"
-  },
-  "keywords": [
-    "circom",
-    "asn1",
-    "der",
-    "ber",
-    "zk"
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
+  "keywords": [],
+  "author": "",
   "license": "MIT",
-  "dependencies": {
-    "@zk-email/circuits": "^6.1.2",
-    "circomkit": "^0.0.22",
-    "circomlib": "^2.0.5"
-  },
-  "devDependencies": {
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.0",
-    "mocha": "^10.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
-  }
+  "packageManager": "yarn@3.2.3"
 }
