--- a/packages/circom/tsconfig.json
+++ b/packages/circom/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "../../",
     "target": "ES2020",
     "module": "commonjs",
     "types": ["mocha", "node"],
