--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "asn1-parser-circom",
+  "version": "0.0.1",
   "description": "circom asn.1 der and ber parser",
   "scripts": {
     "start": "npx ts-node ./src/index.ts",
