--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.5",
     "snarkjs": "^0.7.4",
     "vite-tsconfig-paths": "^4.3.2"
   },
