--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "asn1-parser-circom",
-  "description": "circom asn.1 der and ber parser",
+  "name": "@zk-email/asn1-parser-circom",
+  "version": "0.0.2",
+  "description": "circom asn.1 der and ber parser implementation in circom",
   "scripts": {
     "start": "npx ts-node ./src/index.ts",
     "test": "npx mocha",
@@ -9,8 +10,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/0xVikasRushi/asn1-parser-circom"
+    "url": "git+https://github.com/zkemail/asn1-parser-circom"
   },
+  "contributors": [
+    "Vikas Rushi <0xvikas@gmail.com>"
+  ],
   "keywords": [
     "circom",
     "asn1",
