--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "npx ts-node ./src/index.ts",
     "test": "npx mocha",
     "clean": "npx circomkit clean",
-    "compile:utf8": "npx circomkit compile utf8prover && npx circomkit setup utf8prover"
+    "build:utf8": "npx circomkit compile utf8prover",
+    "prove:utf8": "npx circomkit prove utf8prover default",
+    "verify:utf8": "npx circomkit verify utf8prover default",
+    "build:asnRange": "npx circomkit compile asnRange",
+    "prove:asnRange": "npx circomkit prove asnRange default",
+    "verify:asnRange": "npx circomkit verify asnRange default"
   },
   "repository": {
     "type": "git",
