fix: utf8 witness bug

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "npx ts-node ./src/index.ts",
     "test": "npx mocha",
     "clean": "npx circomkit clean",
+    "generate:utf8": "npx circomkit compile utf8prover && npx circomkit setup utf8prover",
+    "generate:asnRange": "npx circomkit compile asnRange && npx circomkit setup asnRange",
     "build:utf8": "npx circomkit compile utf8prover",
     "prove:utf8": "npx circomkit prove utf8prover default",
+    "setup:utf8": " npx circomkit setup utf8prover",
     "verify:utf8": "npx circomkit verify utf8prover default",
     "build:asnRange": "npx circomkit compile asnRange",
+    "setup:asnRange": "npx circomkit setup asnRange",
     "prove:asnRange": "npx circomkit prove asnRange default",
     "verify:asnRange": "npx circomkit verify asnRange default"
   },
