--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "npx ts-node ./src/index.ts",
     "test": "npx mocha",
     "clean": "npx circomkit clean",
+    "build:utf8": "./build-utf8-circuits.sh ./inputs/utf8prover/default.json",
     "generate:utf8": "npx circomkit compile utf8prover && npx circomkit setup utf8prover",
     "generate:asnRange": "npx circomkit compile asnRange && npx circomkit setup asnRange",
-    "build:utf8": "npx circomkit compile utf8prover",
     "prove:utf8": "npx circomkit prove utf8prover default",
     "setup:utf8": " npx circomkit setup utf8prover",
     "verify:utf8": "npx circomkit verify utf8prover default",
@@ -33,9 +33,11 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@types/snarkjs": "^0.7.8",
     "@zk-email/circuits": "^6.1.2",
     "circomkit": "^0.0.22",
-    "circomlib": "^2.0.5"
+    "circomlib": "^2.0.5",
+    "snarkjs": "^0.7.4"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
